before final changes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -274,4 +274,70 @@
         width: 100%;
         object-fit: cover;
     }
+    /* second section  */
+    .second-section-container {
+        flex-direction: column;
+        align-items: center;
+        max-width: 375px;
+    }
+    .feature-box{
+        margin: 30px 24px 24px 24px;
+    }
+    .features{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .second-section-discr{
+         max-width: 375px;
+        text-align: center; 
+    }
+/* third section */
+    .container{
+    flex-direction: column;
+    align-items: center;
+    }
+    .left-block{
+    max-width: 327px;
+    width: 98%;
+    }
+.right-block{
+    text-align: center;
+    max-width: 327px;
+    width: 98%;
+    }
+    .left-block img{
+    width: 100%;
+    }
+    .title{
+    margin: 14px 0;
+    width: 100%;
+    }
+    .text-block{
+    width: 100%;
+    }
+    /* fourth section */
+    .individual-box:nth-child(2),
+    .individual-box:nth-child(3){
+        display: none;
+     }     
+     .individual-box{
+        margin: 30px 24px;
+     }
+     .boxes-container{
+        margin: 0px auto;
+     }
+     /* fifth */
+     /* .photo-container{
+     width: 375px;
+     }
+     .photo-container img{
+        width: 100%;
+    } */
+     .txt-on-pic h2{
+        font-family: 'Inter', sans-serif;
+        font-size: 28px;
+        max-width: 247px;
+        margin-bottom: 20px;
+     }
 }
